envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9999 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: ${GATEWAY_PORT} }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { path: "/" }
                direct_response:
                  body:
                    inline_string: ok
                  status: 200
              - match: { prefix: "/fantasytrack.draft" }
                route:
                  cluster: draft_backend
                  max_grpc_timeout: 0s
              - match: { prefix: "/" }
                route:
                  cluster: app_backend
                  max_grpc_timeout: 0s
              cors:
                allow_origin_string_match:
                  safe_regex:
                    google_re2: {}
                    regex: .*
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: authorization,idtoken,teamId,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-envoy-external-address
                max_age: "1728000"
                expose_headers: authorization,grpc-status,grpc-message,user-agent,x-envoy-external-address
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              enable_upstream_stats: true
              stats_for_all_methods:
                value: true
              emit_filter_state: true
          - name: envoy.cors
          - name: envoy.router
          use_remote_address: true
  clusters:
  - name: app_backend
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: ${APPSERVER_HOST}, port_value: ${APPSERVER_PORT} }}]
  - name: draft_backend
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: ${DRAFTSERVER_HOST}, port_value: ${DRAFTSERVER_PORT} }}]
